# Red-Wine-Quality-Project

./: .gitignore  README.md  pyproject.toml
notebooks/: Red_wine_quality_analysis.ipynb
utils/: utils.py
